2010-12-21 Malignant Manor <malignantmanor@users.sourceforge.net>
	*actors.cc, schedule.*: Add eat schedule. (eat was using sit)
		It doesn't work yet if there is no plate nearby.

2010-12-21 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.*: Made Eat_at_inn clear food when ending. Fix bug
		where leftover food in oven would be set to a random frame.
		Set the maximum display count for clothes to 3. Remove
		schedule ending exceptions.

2010-12-20 Dominik Reichardt <dominus@users.sourceforge.net>
	* configure.ac: fixed X11 includes on FeeBSD, and warning of ==
	
2010-12-20 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Made npc behavior less erratic when changing to the same
		schedule and location. It doesn't help until after the
		1st hour change in every reloaded or new game. Actors.*
	* Remove parameter message for nonexistent parameter. exult.cc

2010-12-19 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Portable option in Win32 can be accessed from command line
		for Exult and Exult Studio. -p is the parameter for both.
		cheat.cc, exult.cc, files.utils.cc, mapedit/exult_studio.cc,
		mapedit/studio.cc

2010-12-19 Dominik Reichardt <dominus@users.sourceforge.net>
	* configure.ac: enable_exult_studio_support will add -lX11 to SYSLIBS. Fixes some
	  final linking problems in some Linux distributions
	
2010-12-19 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Alternate configuration files work for Exult and Exult Studio.
		cheat.cc, exult.cc, mapedit/studio.cc
	* gamewin.cc: use get_effective_alignment() for is_hostile_nearby()

2010-12-19 Malignant Manor <malignantmanor@users.sourceforge.net>
	* charmDifficulty hard setting changes
	* keys.*: Separate keys allowed when Avatar is charmed
	* exult.cc: Allow paused_combat_select to work again when the Avatar
	is charmed (for uncharmed party members)
	* gamewin.cc: Charmed party members stay in combat mode
